--- a/html/_includes/molecule/stars.html
+++ b/html/_includes/molecule/stars.html
@@ -1,4 +1,4 @@
-<div class="{{ include.s-class }}">
+<div class="{{ include.s-class }} stars">
   {% for i in (1...include.stars) %}
   <i class="fa fa-star fa-star--custom" aria-hidden="true"></i>
   {% endfor %}
