--- a/html/_includes/organisms/header.html
+++ b/html/_includes/organisms/header.html
@@ -13,6 +13,9 @@
                 <h6>Existing Patients: {{ site.data.content.contact.phone-existing }}</h6>
             </div>
         </div>
-        {% include molecule/nav.html %}
+        <div class="header__nav">
+            {% include molecule/nav.html %}
+        </div>
+
     </header>
 </section>
