--- a/html/_scss/main.scss
+++ b/html/_scss/main.scss
@@ -1,4 +1,5 @@
 @import "base/_colors.scss";
+@import "base/_breakpoints.scss";
 @import "globals/_fonts.scss";
 @import "components/_contact.scss";
 @import "components/_specials.scss";
