imported sticky header from canvas

--- a/html/_scss/main.scss
+++ b/html/_scss/main.scss
@@ -15,6 +15,7 @@
 @import "components/_header.scss";
 @import "components/_btn.scss";
 @import "vendor/_slick-theme.scss";
+@import "vendor/_sticky_header.scss";
 
 
 body {
