fix styling of the furusho header

--- a/html/_includes/organisms/header.html
+++ b/html/_includes/organisms/header.html
@@ -1,22 +1,4 @@
-    <!--<header class="header__content wrapper clearfix">-->
-
-        <!--<div class="col-md-7 col-sm-6">-->
-            <!--<div class="header__logo">-->
-                <!--<img src="images/furusho-masthead-logo.png" alt="">-->
-            <!--</div>-->
-        <!--</div>-->
-        <!--<div class="col-md-5 col-sm-6">-->
-            <!--<div class="header__info">-->
-                <!--<h4 class="font-accent-green">Just off Edens Expressway (Hwy&nbsp;94)</h4>-->
-                <!--<h5 class="font-accent-purple">New Patients: <span class="header__info&#45;&#45;bold">{{ site.data.content.contact.phone-new }}</span></h5>-->
-                <!--<h6>Existing Patients: {{ site.data.content.contact.phone-existing }}</h6>-->
-            <!--</div>-->
-        <!--</div>-->
-        <!--<div class="header__nav">-->
-            <!--{% include molecule/nav.html %}-->
-        <!--</div>-->
-
-    <!--</header>-->
+    <div class="container">
     <header id="header" class="sticky-style-2 header__content">
 
         <div class="container clearfix">
@@ -43,4 +25,5 @@
             {% include molecule/nav.html %}
         </div>
     </header>
+    </div>
 
