--- a/html/_scss/main.scss
+++ b/html/_scss/main.scss
@@ -78,9 +78,6 @@ section {
   top: 0px;
   width: 100%;
 }
-.main-container {
-  margin-top: 235px;
-}
 .center {
   text-align: center;
 }
@@ -126,7 +123,7 @@ img {
 }
 
 .container {
-  padding: 20px;
+  //padding: 30px 0px;
 }
 
 
