move footer into container, remove extra container from everypage

--- a/html/_includes/organisms/footer.html
+++ b/html/_includes/organisms/footer.html
@@ -1,8 +1,10 @@
-<section class="footer">
-    <footer class="footer__wrapper center clearfix">
-        <div class="footer__content">
-            <a target="_blank" href="https://www.facebook.com/Dentistry-for-Kids-Ltd-Dr-Furusho-Dr-Kollmann-293517314003627/"><img src="images/facebook_round_blue.svg" alt="facebook link" class="facebook-icon pull-left"></a>
-            <h6 class="footer__text">Copyright © 2016 All Rights Reserved by Tyson Steele Associates. Privacy Policy</h6>
-        </div>
-    </footer>
-</section>
+<div class="container">
+    <section class="footer">
+        <footer class="footer__wrapper center clearfix">
+            <div class="footer__content">
+                <a target="_blank" href="https://www.facebook.com/Dentistry-for-Kids-Ltd-Dr-Furusho-Dr-Kollmann-293517314003627/"><img src="images/facebook_round_blue.svg" alt="facebook link" class="facebook-icon pull-left"></a>
+                <h6 class="footer__text">Copyright © 2016 All Rights Reserved by Tyson Steele Associates. Privacy Policy</h6>
+            </div>
+        </footer>
+    </section>
+</div>
