styling of header and marquee

--- a/html/_includes/organisms/marquee-1.html
+++ b/html/_includes/organisms/marquee-1.html
@@ -1,6 +1,5 @@
-<section id="marquee-1" class="margin-bottom">
+<section id="marquee-1" class="section-margins">
 
-  <div class="">
     <div class="marquee__slider__wrapper">
       <section class="marquee__slider">
 
@@ -54,13 +53,10 @@
       </section>
     </div>
 
-  </div>
-  <div class="scrolldown-container">
     <div class="smooth-scroll-btn marquee__scroll-down">
       <a href="#section__about" data-offset="00" data-scrollto="#section__about">
         <h4 class="scroll__text">Scroll Down</h4>
         <img src="images/arrow-down.svg" alt="Down Arrow">
       </a>
     </div>
-  </div>
 </section>
