--- a/html/_scss/main.scss
+++ b/html/_scss/main.scss
@@ -40,6 +40,9 @@ section {
   background-position: center center;
   background-size: cover;
 }
+nav {
+  height: 100%;
+}
 
 .mobile-hide {
   display: none;
