--- a/html/_scss/components/_header.scss
+++ b/html/_scss/components/_header.scss
@@ -54,7 +54,7 @@
 
 .custom-nav {
   background-color: #8117B7;
-  height: 50px;
+  height: 100%;
   width: 100%;
   display: flex;
   flex-direction: row;
