--- a/html/_scss/main.scss
+++ b/html/_scss/main.scss
@@ -53,7 +53,7 @@ nav {
   justify-content: center;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: $width--medium) {
   .row-height-wrapper {
     display: block;
   }
