--- a/html/_scss/base/_colors.scss
+++ b/html/_scss/base/_colors.scss
@@ -9,7 +9,7 @@ $background-third: #E5F0EF;
 $background-footer: #4A4A4A;
 
 //font colors
-$primary-font: rgba(56,27,71,0.90);
+$primary-font: rgb(56,27,71);
 $accent-font-first: #FFFFFF;
 $accent-font-second: #8117B7;
 $accent-font-third: #FFFFFF;
