--- a/html/_scss/main.scss
+++ b/html/_scss/main.scss
@@ -75,7 +75,13 @@ nav {
 .uppercase {
   text-transform: uppercase;
 }
-
+.pad-bottom {
+  padding-bottom: 20px;
+}
+.pad-vert {
+  padding-bottom: 20px;
+  padding-top: 20px;
+}
 .section-margins {
   margin: 15px 0px;
 }
