--- a/html/_includes/organisms/contact.html
+++ b/html/_includes/organisms/contact.html
@@ -1,4 +1,4 @@
-<section class="contact{% if include.additional %} contact--has-additional{% endif %} section-margins">
+<section class="contact{% if include.additional %} contact--has-additional{% endif %} section-margins pad-vert">
     <div class="contact__content container clearfix">
 
         <div class="row">
