--- a/html/_scss/globals/_fonts.scss
+++ b/html/_scss/globals/_fonts.scss
@@ -63,7 +63,7 @@ h1 {
 h2 {
   font-size: 36px;
   @media screen and (max-width: $width--xlarge) {
-    font-size: 50px;
+    font-size: 36px;
   }
   @media screen and (max-width: $width--large) {
     font-size: 30px;
@@ -78,7 +78,10 @@ h6 {
 }
 
 p {
-  font-size: 16px;
+  font-size: 18px;
+  @media screen and (max-width: $width--medium) {
+    font-size: 16px;
+  }
 }
 
 nav a {
