import cleaner associations slider from the semantic version

--- a/html/_scss/components/_team.scss
+++ b/html/_scss/components/_team.scss
@@ -26,6 +26,13 @@
 
 }
 
+.associations-slide img {
+  max-height: 50px;
+  width: auto;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .main-bio-pic {
   @media screen and (max-width: $width--xlarge) {
   }
