clean up styling around the next and prev buttons

--- a/html/_scss/components/_header.scss
+++ b/html/_scss/components/_header.scss
@@ -71,6 +71,7 @@
     color: white;
     font-size: 2.7em;
     padding: 5px 20%;
+    margin-top: 7px;
   }
   li {
     background-color: $background-dark;
@@ -104,9 +105,6 @@
   background-color: #512A65;
 }
 
-.nav__link {
-  color: #FFF;
-}
 
 //Responsive fixes
 
