--- a/html/_scss/components/_frenectomy.scss
+++ b/html/_scss/components/_frenectomy.scss
@@ -12,3 +12,13 @@
     font-weight: 700;
   }
 }
+
+.baby-photo {
+  margin-top: 20px;
+  @media screen and (max-width: $width--medium) {
+    margin-top: 0;
+    max-width: 200px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
