--- a/html/_scss/components/_marquee.scss
+++ b/html/_scss/components/_marquee.scss
@@ -93,7 +93,24 @@
     height: 384px;
   }
   @media screen and (max-width: $width--medium) {
-    height: 100%;
+    height: 300px;
+  }
+}
+
+.text-marquee-middle {
+  margin-top: 160px;
+  @media screen and (max-width: $width--xlarge) {
+    margin-top: 130px;
+  }
+  @media screen and (max-width: $width--large) {
+    margin-top: 110px;
+  }
+  @media screen and (max-width: $width--medium) {
+    margin-top: 80px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+
   }
 }
 
