--- a/html/_scss/components/_services.scss
+++ b/html/_scss/components/_services.scss
@@ -1,3 +1,12 @@
 .services {
 
+  &__image {
+    @media screen and (max-width: $width--medium) {
+      max-width: 350px;
+    }
+    @media screen and (max-width: $width--small) {
+      max-width: 250px;
+    }
+  }
+
 }
