--- a/html/_scss/components/_footer.scss
+++ b/html/_scss/components/_footer.scss
@@ -2,13 +2,16 @@
   max-width: 40px;
   height: auto;
   fill: $accent-font-first;
+  @media screen and (max-width: 650px) {
+    float: none !important;
+  }
 }
 
 .footer {
   background: $background-footer;
   padding: 20px;
-  color: $accent-font-first;
   &__text {
+    color: $accent-font-first;
     margin-top: 0px;
     padding-top: 12px;
     //TODO What the what font?
