--- a/html/_scss/components/_marquee.scss
+++ b/html/_scss/components/_marquee.scss
@@ -129,6 +129,9 @@
 .slide-container {
   position: absolute;
   top: 0;
+  width: 100%;
+  margin: 0px 15px;
+  color: white;
 }
 
 .marquee__slide.slick-slide {
