--- a/html/_includes/organisms/marquee-1.html
+++ b/html/_includes/organisms/marquee-1.html
@@ -10,7 +10,7 @@
               <div class="col-xs-6">
                 <h1>Creating happy<br>healthy smiles<br>one child at a time</h1>
                 <h3>NOW WELCOMING <br>NEW PATIENTS</h3>
-                <a class="btn btn--left btn--inverted">NEW PATIENT OFFERS</a>
+                <a class="btn btn--left btn--inverted marquee__btn1">NEW PATIENT OFFERS</a>
               </div>
             </div>
         </div>
@@ -20,7 +20,7 @@
         <img src="images/slide3.jpg" alt="">
         <div class="slide-container">
           <div class="row">
-            <div class="col-xs-4">
+            <div class="col-xs-4 pad-top-2x pad-left-2x">
               <div class="stars">
                 <i class="fa fa-star fa-star--custom fa-3x" aria-hidden="true"></i>
                 <i class="fa fa-star fa-star--custom fa-3x" aria-hidden="true"></i>
@@ -28,10 +28,10 @@
                 <i class="fa fa-star fa-star--custom fa-3x" aria-hidden="true"></i>
                 <i class="fa fa-star fa-star--custom fa-3x" aria-hidden="true"></i>
               </div>
-              <h4>“My three kids love them. Great team, very organized operation and state of the art technology is
+              <h4 class="marquee__quote">“My three kids love them. Great team, very organized operation and state of the art technology is
                 a recipe for success. Lastly and definitely not the least, they simply work great with KIDS!” </h4>
               <h4>–Ron N.</h4>
-              <a class="btn btn--left btn--inverted">READ OUR REVIEWS</a>
+              <a class="btn btn--left btn--inverted marquee__btn2">READ OUR REVIEWS</a>
             </div>
           </div>
         </div>
