--- a/html/_scss/components/_btn.scss
+++ b/html/_scss/components/_btn.scss
@@ -8,4 +8,30 @@
   &--left.btn {
     margin-left: 0px;
   }
+
+  &.marquee__btn1 {
+    margin-top: 120px;
+    @media screen and (max-width: $width--xlarge) {
+      margin-top: 70px;
+    }
+    @media screen and (max-width: $width--large) {
+      margin-top: 20px;
+    }
+    @media screen and (max-width: $width--medium) {
+      display: none;
+    }
+  }
+
+  &.marquee__btn2 {
+    margin-top: 160px;
+    @media screen and (max-width: $width--xlarge) {
+      margin-top: 50px;
+    }
+    @media screen and (max-width: $width--large) {
+      margin-top: 150px;
+    }
+    @media screen and (max-width: $width--medium) {
+      display: none;
+    }
+  }
 }
