--- a/html/_scss/main.scss
+++ b/html/_scss/main.scss
@@ -72,6 +72,10 @@ nav {
   top: 0px;
   width: 100%;
 }
+.header--fix {
+  margin-top: 0;
+  padding-top: 20px;
+}
 .center {
   text-align: center;
 }
@@ -85,12 +89,18 @@ nav {
 .pad-top {
   padding-top: 20px;
 }
+.pad-top-2x {
+  padding-top: 40px;
+}
 .pad-vert {
   padding-bottom: 20px;
   padding-top: 20px;
 }
 .marg-top {
   margin-top: 40px;
+}
+.pad-left-2x {
+  padding-left: 40px;
 }
 .section-margins {
   margin: 15px 0px;
