fix styling on footer link

--- a/html/_scss/main.scss
+++ b/html/_scss/main.scss
@@ -113,6 +113,11 @@ nav {
   padding: 0px 30px 30px 30px;
 }
 
+.link-no-style:hover {
+  color: #FFF;
+  text-decoration: none;
+}
+
 img {
   width: 100%;
 }
