--- a/html/_includes/molecule/nav.html
+++ b/html/_includes/molecule/nav.html
@@ -7,8 +7,8 @@
     </div>
 
     <ul class="custom-nav nav-pills nav--toggle">
-        <li><a class="nav__link font-accent-yellow" href="index.html#section-specials">New&nbsp;Patient&nbsp;Specials</a></li>
-        <li><a class="nav__link font-accent-lightgreen" href="index.html#section-reviews">Patient&nbsp;Reviews</a></li>
+        <li><a class="nav__link font-accent-yellow" href="index.html#section-specials"  data-scrollto="#section-specials" data-offset="50">New&nbsp;Patient&nbsp;Specials</a></li>
+        <li><a class="nav__link font-accent-lightgreen" href="index.html#section-reviews" data-scrollto="#section-reviews" data-offset="50">Patient&nbsp;Reviews</a></li>
         {% assign sorted = site.pages | sort:"weight" %}
         {% for item in sorted %}
             {% if item.link.text and item.link.text != "Home" %}
