--- a/html/_includes/organisms/marquee-1.html
+++ b/html/_includes/organisms/marquee-1.html
@@ -10,7 +10,7 @@
               <div class="col-xs-6">
                 <h1>Creating happy<br>healthy smiles<br>one child at a time</h1>
                 <h3>NOW WELCOMING <br>NEW PATIENTS</h3>
-                <a class="btn btn--left btn--inverted marquee__btn1">NEW PATIENT OFFERS</a>
+                <a class="btn btn--left btn--inverted marquee__btn1"  data-scrollto="#section-specials" data-offset="50">NEW PATIENT OFFERS</a>
               </div>
             </div>
         </div>
@@ -30,8 +30,8 @@
               </div>
               <h4 class="marquee__quote">“My three kids love them. Great team, very organized operation and state of the art technology is
                 a recipe for success. Lastly and definitely not the least, they simply work great with KIDS!” </h4>
-              <h4>–Ron N.</h4>
-              <a class="btn btn--left btn--inverted marquee__btn2">READ OUR REVIEWS</a>
+              <h4 style="text-align: right;">–Ron N.</h4>
+              <a class="btn btn--left btn--inverted marquee__btn2" data-scrollto="#section-reviews" data-offset="50">READ OUR REVIEWS</a>
             </div>
           </div>
         </div>
