--- a/html/_scss/components/_marquee.scss
+++ b/html/_scss/components/_marquee.scss
@@ -65,10 +65,11 @@
   }
   &__scroll-down {
     position: relative;
-    left: 0px;
     text-align: center;
-    right: 0px;
     top: -90px;
+    width: 200px;
+    margin-left: auto;
+    margin-right: auto;
   }
   &__scroll-down a {
     color: white;
@@ -132,7 +133,7 @@
 .slide-container {
   position: absolute;
   top: 0;
-  width: 100%;
+  width: 95%;
   margin: 0px 15px;
   color: white;
 }
