--- a/html/_scss/components/_reviews.scss
+++ b/html/_scss/components/_reviews.scss
@@ -9,6 +9,9 @@
     background-position: center center;
     background-size: cover;
   }
+  @media screen and (max-width: $width--medium) {
+    min-height: 500px;
+  }
   &__slider {
     margin-bottom: -20px;
   }
@@ -23,6 +26,14 @@
   }
   &__review {
     padding: 50px 0px 20px 0px;
+    @media screen and (max-width: $width--large) {
+      padding: 20px 0px 20px 0px;
+    }
+    @media screen and (max-width: $width--small) {
+      padding: 0px;
+      font-size: 14px;
+      line-height: 20px;
+    }
   }
   &__quoty {
     margin-bottom: 20px;
@@ -33,5 +44,11 @@
   background: rgba(80,42,100,0.80);
   &__slide {
     padding: 50px 50px;
+    @media screen and (max-width: $width--large) {
+      padding: 30px 50px;
+    }
+    @media screen and (max-width: $width--medium) {
+      //font-size: 30px;
+    }
   }
 }
