--- a/html/_scss/components/_team.scss
+++ b/html/_scss/components/_team.scss
@@ -19,7 +19,37 @@
     }
   }
 }
+.team-slider .slick-slide .img-container {
+  margin: 0 auto;
+  display: inline-block;
+  &:hover:after {
+    content: "\f067";
+    position: absolute;
+    top: 40%;
+    color: white;
+  }
+  &:hover:before {
+    content: " ";
+    display: block;
+    height: 308px;
+    position: absolute;
+    width: 220px;
+    top: 0px;
+    background-color: rgba(0, 0, 0, 0.37);
+  }
 
+}
+.team-slider .slick-slide {
+  text-align: center;
+  img {
+    max-width: 220px;
+  }
+}
+
+
+.team-additional {
+  padding-top:40px;
+}
 .team-header {
 
 }
