--- a/html/_scss/globals/_fonts.scss
+++ b/html/_scss/globals/_fonts.scss
@@ -131,6 +131,9 @@ h2 {
 
 h3 {
   font-size: 26px;
+  @media screen and (max-width: $width--large) {
+    font-size: 24px;
+  }
   @media screen and (max-width: $width--medium) {
     font-size: 22px;
   }
