--- a/html/_includes/organisms/header.html
+++ b/html/_includes/organisms/header.html
@@ -12,7 +12,7 @@
                 <div class="col-md-5 col-sm-6">
                     <div class="header__info">
                         <h4 class="font-accent-green">Just off Edens Expressway (Hwy&nbsp;94)</h4>
-                        <h5 class="font-accent-purple">New Patients: <span class="header__info--bold">{{ site.data.content.contact.phone-new }}</span></h5>
+                        <h4 class="font-accent-purple font-weight-bold">New Patients: <span class="header__info--bold">{{ site.data.content.contact.phone-new }}</span></h4>
                         <h6>Existing Patients: {{ site.data.content.contact.phone-existing }}</h6>
                     </div>
                 </div>
