fix rendering issue with slick carousels 'ghosting' upon page load

--- a/html/_scss/components/_marquee.scss
+++ b/html/_scss/components/_marquee.scss
@@ -6,6 +6,7 @@
   &__slide {
     background-position: center center;
     background-size: cover;
+    display: none;
   }
   &__slide-wrapper {
     //height: 600px;
