--- a/html/_scss/components/_reviews.scss
+++ b/html/_scss/components/_reviews.scss
@@ -43,6 +43,7 @@
 .review {
   background: rgba(80,42,100,0.80);
   &__slide {
+    display: none;
     padding: 50px 50px;
     @media screen and (max-width: $width--large) {
       padding: 30px 50px;
