--- a/html/_includes/foot.html
+++ b/html/_includes/foot.html
@@ -1,3 +1,9 @@
+<script type="text/template" id="success_msg">
+    <p>Congratulations! Dentistry is a big part of a healthy life, and we're excited to be a part of yours. We will
+        contact you in the next 2 business days to schedule your appointment and to answer any questions you may still have.
+        Thank you!</p>
+</script>
+
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
@@ -10,16 +16,6 @@
 <script src="js/functions.js"></script>
 
 <script src="js/main.js"></script>
-
-<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-<script>
-    (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-        function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-        e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-        e.src='//www.google-analytics.com/analytics.js';
-        r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-    ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-</script>
 
 </body>
 </html>
