clean up code to pass wc3 validator

--- a/html/_includes/head.html
+++ b/html/_includes/head.html
@@ -12,7 +12,7 @@
     <title>{% if page.meta.title %}{{ page.meta.title }}{% else %}Tysone Steele Associates{% endif %}</title>
     <meta name='keywords' content='Providing Pediatric Dentistry and Orthodontics to Chicago.'/>
     <meta name='description' content='Pediatric Dentists Cissy Furusho, Kirk Kollmann and Marvin Berman offer dentistry for children, kids, and teens in the Chicago area!' />
-    <meta name="author" content="Hello World"/>
+    <meta name="author" content="Hello World Devs"/>
 
     <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css"/>
 
