--- a/html/_includes/foot.html
+++ b/html/_includes/foot.html
@@ -1,3 +1,45 @@
+<div class="modal fade" id="modal-form" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                    aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">Request an Appointment</h4>
+            </div>
+            <form id="mail-form" action="//web-api.tysonsteele.com/v1/webprops/KEY/notify">
+                <div class="container center">
+                    <h5>YES! Please contact me to schedule an appointment or answer any questions I might still have:</h5>
+                    <div class="row appointment_input_row form-group">
+                        <div class="col-xs-4">
+                            <label for="name">My name:</label>
+                        </div>
+                        <div class="col-xs-8">
+                            <input type="text" required name="name" id="name" class="form-control appointment_form"/>
+                        </div>
+                    </div>
+                    <div class="row appointment_input_row form-group">
+                        <div class="col-xs-4">
+                            <label for="name">Email:</label>
+                        </div>
+                        <div class="col-xs-8">
+                            <input type="email" required name="email" id="email" class="form-control appointment_form"/>
+                        </div>
+                    </div>
+                    <div class="row appointment_input_row form-group">
+                        <div class="col-xs-4">
+                            <label for="name">Phone #:</label>
+                        </div>
+                        <div class="col-xs-8">
+                            <input type="text" required name="phone" id="phone" class="form-control appointment_form"/>
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-danger btn-lg">Request Appointment</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
 <script type="text/template" id="success_msg">
     <p>Congratulations! Dentistry is a big part of a healthy life, and we're excited to be a part of yours. We will
         contact you in the next 2 business days to schedule your appointment and to answer any questions you may still have.
