add clickability to the phone numbers and fix line break issues

--- a/html/_scss/main.scss
+++ b/html/_scss/main.scss
@@ -29,6 +29,11 @@ a {
 }
 a:hover {
   text-decoration: none;
+  color: inherit;
+}
+a.telephone {
+  text-decoration: inherit;
+  color: inherit;
 }
 
 section {
