add home icon to the header

--- a/html/_includes/molecule/nav.html
+++ b/html/_includes/molecule/nav.html
@@ -7,6 +7,7 @@
     </div>
 
     <ul class="custom-nav nav-pills nav--toggle">
+        <li class="not-active"><a class="nav__link font-accent-white" href="index.html" ><i class="custom-nav__home-icon fa fa-home"></i></a></li>
         <li class="not-active"><a class="nav__link font-accent-yellow" href="index.html#section-specials"  data-scrollto="#section-specials" data-offset="50">New&nbsp;Patient&nbsp;Specials</a></li>
         <li class="not-active"><a class="nav__link font-accent-lightgreen" href="index.html#section-reviews" data-scrollto="#section-reviews" data-offset="50">Patient&nbsp;Reviews</a></li>
         {% assign sorted = site.pages | sort:"weight" %}
