--- a/html/_scss/components/_header.scss
+++ b/html/_scss/components/_header.scss
@@ -81,6 +81,11 @@
     padding: 5px 20%;
     margin-top: 7px;
   }
+  &__home-icon {
+    color: white;
+    font-size: 2.2em;
+    margin-top: -1px;
+  }
   li {
     background-color: $background-dark;
   }
