--- a/html/_scss/components/_specials.scss
+++ b/html/_scss/components/_specials.scss
@@ -1,7 +1,7 @@
 .specials {
   &__tile {
     border: 1px solid $background-dark;
-    background-color: white;
+    background-color: rgba(255,255,255,0.90);
     margin: 10px;
     text-align: center;
   }
