additional small edits from tyson steele review

--- a/html/_scss/components/_marquee.scss
+++ b/html/_scss/components/_marquee.scss
@@ -129,6 +129,9 @@
     text-align: center;
 
   }
+  @media screen and (max-width: $width--small) {
+    margin-top: 25px;
+  }
 }
 
 .slide-container {
