--- a/html/_includes/organisms/header.html
+++ b/html/_includes/organisms/header.html
@@ -9,7 +9,7 @@
                         <a href="index.html"><img src="images/furusho-masthead-logo.png" alt=""></a>
                     </div>
                 </div>
-                <div class="col-md-5 col-sm-6">
+                <div class="col-md-5 col-sm-6 hidden-xs">
                     <div class="header__info">
                         <h4 class="font-accent-green">Just off Edens Expressway (Hwy&nbsp;94)</h4>
                         <h4 class="font-accent-purple font-weight-bold">New Patients: <span class="header__info--bold">{{ site.data.content.contact.phone-new }}</span></h4>
