--- a/html/_scss/_responsivefixes.scss
+++ b/html/_scss/_responsivefixes.scss
@@ -1,5 +1,8 @@
 h1.marquee-patients-content {
   padding-left: 0;
+  @media (max-width: $width--small) {
+    font-size: 18px;
+  }
 }
 
 @media (max-width: 767px) {
