--- a/html/_scss/components/_header.scss
+++ b/html/_scss/components/_header.scss
@@ -7,6 +7,7 @@
     text-align: left;
     @media screen and (max-width: $width--medium) {
       text-align: center;
+      padding-bottom: 10px;
     }
     & img {
       max-width: 500px;
@@ -43,7 +44,7 @@
         font-size: 1.0em;
       }
       @media screen and (max-width: $width--large) {
-        font-size: 0.9em;
+        font-size: 0.8em;
       }
       @media screen and (max-width: $width--medium) {
         font-size: 18px;
