first set or corrections from Tyson Steele

--- a/html/_includes/foot.html
+++ b/html/_includes/foot.html
@@ -7,7 +7,7 @@
                 <h4 class="modal-title">Request an Appointment</h4>
             </div>
             <form id="mail-form" action="//web-api.tysonsteele.com/v1/webprops/KEY/notify">
-                <div class="container center">
+                <div class="container">
                     <h5>YES! Please contact me to schedule an appointment or answer any questions I might still have:</h5>
                     <div class="row appointment_input_row form-group">
                         <div class="col-xs-4">
@@ -33,7 +33,7 @@
                             <input type="text" required name="phone" id="phone" class="form-control appointment_form"/>
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-danger btn-lg">Request Appointment</button>
+                    <div class="center"><button type="submit" class="btn btn-danger btn-lg">Request Appointment</button></div>
                 </div>
             </form>
         </div>
