--- a/html/_includes/organisms/marquee-1.html
+++ b/html/_includes/organisms/marquee-1.html
@@ -32,7 +32,7 @@
           <img src="images/slide3.jpg" alt="">
           <div class="slide-container">
             <div class="row">
-              <div class="col-xs-4 pad-top-3x pad-left-2x">
+              <div class="col-xs-4 pad-top-3x pad-left-2x layout-fix-1">
                 <div class="stars">
                   <i class="fa fa-star fa-star--custom fa-3x" aria-hidden="true"></i>
                   <i class="fa fa-star fa-star--custom fa-3x" aria-hidden="true"></i>
@@ -43,9 +43,9 @@
                 <h4 class="marquee__quote">“My three kids love them. Great team, very organized operation and state of the art technology is
                   a recipe for success. Lastly and definitely not the least, they simply work great with KIDS!” </h4>
                 <h4 style="text-align: right;">–Ron N.</h4>
-                <a class="btn btn--left btn--inverted marquee__btn2" data-scrollto="#section-reviews" data-offset="50">READ OUR REVIEWS</a>
               </div>
             </div>
+                <a class="btn btn--left btn--inverted marquee__btn2" data-scrollto="#section-reviews" data-offset="50">READ OUR REVIEWS</a>
           </div>
         </div>
 
