--- a/html/_scss/components/_btn.scss
+++ b/html/_scss/components/_btn.scss
@@ -28,7 +28,10 @@
       margin-top: 50px;
     }
     @media screen and (max-width: $width--large) {
-      display: none;
+      float: right;
+      margin-top: -35px;
+      margin-right: 10px;
+
     }
   }
 }
