--- a/html/_scss/main.scss
+++ b/html/_scss/main.scss
@@ -165,6 +165,9 @@ img {
   letter-spacing: -0.33px;
   text-transform: uppercase;
   padding: 20px 40px;
+  @media screen and (max-width: $width--large) {
+    padding: 15px 30px;
+  }
   margin: 30px;
   border-radius: 0px;
   &:hover {
