--- a/html/_scss/main.scss
+++ b/html/_scss/main.scss
@@ -300,3 +300,12 @@ img {
 }
 
 @import '_responsivefixes.scss';
+
+.team-additional .slick-list {
+  width: 95%;
+  @media (max-width: $width--small) {
+    width: 80%;
+  }
+  margin-right: auto;
+  margin-left: auto;
+}
