--- a/html/_includes/foot.html
+++ b/html/_includes/foot.html
@@ -41,9 +41,11 @@
 </div>
 
 <script type="text/template" id="success_msg">
-    <p>Congratulations! Dentistry is a big part of a healthy life, and we're excited to be a part of yours. We will
-        contact you in the next 2 business days to schedule your appointment and to answer any questions you may still have.
-        Thank you!</p>
+    <div class="padding-reg">
+        <p>Congratulations! Dentistry is a big part of a healthy life, and we're excited to be a part of yours. We will
+            contact you in the next 2 business days to schedule your appointment and to answer any questions you may still have.
+            Thank you!</p>
+    </div>
 </script>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
