--- a/html/_scss/main.scss
+++ b/html/_scss/main.scss
@@ -107,6 +107,11 @@ nav {
     padding-top: 40px;
   }
 }
+
+.padding-reg {
+  padding: 20px;
+}
+
 .pad-vert {
   padding-bottom: 20px;
   padding-top: 20px;
@@ -308,4 +313,30 @@ img {
   }
   margin-right: auto;
   margin-left: auto;
+}
+
+.services__image__container {
+  margin: 0 auto;
+  display: inline-block;
+  position: relative;
+  &:hover:after {
+    font-family: 'Bitter';
+    content: "+";
+    position: absolute;
+    top: 35%;
+    color: white;
+    font-size: 60px;
+    left: 45%;
+    z-index: 11;
+  }
+  &:hover:before {
+    content: " ";
+    display: block;
+    position: absolute;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    background-color: rgba(0, 0, 0, 0.37);
+  }
 }
