--- a/html/_scss/components/_header.scss
+++ b/html/_scss/components/_header.scss
@@ -36,7 +36,7 @@
     clear: both;
     background-color: $background-dark;
     .custom-nav > li > a {
-      font-family: 'Raleway';
+      font-family: 'Raleway', sans-serif;
       padding-left: 0.5%;
       padding-right: 0.5%;
       font-size: 1.1em;
