fix last three bugs on furusho (phone link typo, different icons, additional copy

--- a/html/_scss/components/_slick.scss
+++ b/html/_scss/components/_slick.scss
@@ -42,11 +42,11 @@
 //arrows
 
 .slick-next {
-  right: 3px;
+  right: 5px;
 }
 
 .slick-prev {
-  left: 3px;
+  left: 5px;
   z-index: 1;
 }
 
@@ -57,51 +57,47 @@
 }
 
 .slick-next:before {
-  content: "\f054";
+  content: "\f0A9";
   font-family: 'FontAwesome';
-  border: 2px solid white;
   border-radius: 100%;
   display: block;
   width: 30px;
   height: 30px;
-  font-size: 20px;
+  font-size: 35px;
   line-height: 30px;
 }
 
 .slick-prev:before {
-  content: " \f053";
+  content: " \f0A8";
   font-family: 'FontAwesome';
-  border: 2px solid white;
   border-radius: 100%;
   display: block;
   width: 30px;
   height: 30px;
-  font-size: 20px;
+  font-size: 35px;
   line-height: 30px;
 }
 
 .team-slick-nav.slick-next:before {
-  content: "\f054";
+  content: "\f0A9";
   font-family: 'FontAwesome';
-  border: 2px solid #8117B7;
   color: #8117B7;
   border-radius: 100%;
   display: block;
   width: 30px;
   height: 30px;
-  font-size: 20px;
+  font-size: 35px;
   line-height: 30px;
 }
 
 .team-slick-nav.slick-prev:before {
-  content: " \f053";
+  content: " \f0A8";
   font-family: 'FontAwesome';
-  border: 2px solid #8117B7;
   color: #8117B7;
   border-radius: 100%;
   display: block;
   width: 30px;
   height: 30px;
-  font-size: 20px;
+  font-size: 35px;
   line-height: 30px;
 }
